# free-agent

./: .gitignore  .travis.yml  LICENSE  README.md  free-agent.cabal
docs/: Control-Agent-Free-Algorithms-ABT.html  Control-Agent-Free-Environments-STM.html  Control-Agent-Free-Interfaces-SendRecv.html  Control-Agent-Free-Interfaces.html  Control-Agent-Free-Internal.html  Control-Agent-Free-Interpret.html  Control-Agent-Free.html  doc-index.html  free-agent.haddock  index-frames.html  index.html  mini_Control-Agent-Free-Algorithms-ABT.html  mini_Control-Agent-Free-Environments-STM.html  mini_Control-Agent-Free-Interfaces-SendRecv.html  mini_Control-Agent-Free-Interfaces.html  mini_Control-Agent-Free-Internal.html  mini_Control-Agent-Free-Interpret.html  mini_Control-Agent-Free.html
examples/: GraphColor.lhs  abt  abt.hs  bully  bully.hs  sub-algo.hs
src/Control/Agent/: Free.hs
src/Control/Agent/Free/: Interfaces.hs  Internal.hs  Interpret.hs
src/Control/Agent/Free/Algorithms/: ABT.hs  Termination.hs
src/Control/Agent/Free/Environments/: STM.hs
src/Control/Agent/Free/Interfaces/: DirectoryService.hs  SendRecv.hs
test/Control/Agent/: FreeSpec.hs
