Name:                   free-agent
Version:                0.1.0
Author:                 Nickolay Kudasov<nickolay.kudasov@gmail.com>
Maintainer:             Nickolay Kudasov<nickolay.kudasov@gmail.com>
Homepage:               https://github.com/fizruk/free-agent
Bug-Reports:            https://github.com/fizruk/free-agent/issues
License:                BSD3
License-File:           LICENSE
Synopsis:               Multi agent systems based on free monads.
Description:
  This package provides a general framework for multi agent systems.
  Agent-environment interface is implemented using free monads.
Cabal-Version:          >= 1.10
Build-Type:             Simple
Stability:              experimental
Category:               Control

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Control.Agent.Free
                        -- Algorithms
                        Control.Agent.Free.Algorithms.ABT
                        -- Environments
                        Control.Agent.Free.Environments.STM
                        -- Interfaces
                        Control.Agent.Free.Interfaces
                        Control.Agent.Free.Interfaces.SendRecv
  Build-Depends:        base >= 4 && < 5
                      , free >= 4.2
                      , transformers >= 0.3
                      , mtl >= 2.1
                      , containers >= 0.5
                      , stm >= 2.4

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/fizruk/free-agent.git
